--- a/ingestion/Dockerfile
+++ b/ingestion/Dockerfile
@@ -12,4 +12,5 @@ RUN pip install -r requirements.txt
 
 COPY data_ingestion.py /workspace/ingestion
 
+# REMINDER: needs aws credentials on docker run (env vars)
 CMD ["python", "data_ingestion.py"]
